# openai_realtime_client

./: .gitignore  README.md  cli.py  pyproject.toml  realtime_client.py
examples/: manual_cli.py  streaming_cli.py  streaming_device_selection.py
openai_realtime_client/client/: realtime_client.py
openai_realtime_client/handlers/: audio_handler.py
